# MAGIX-AI-PDFAnalyzer

./: .env  Dockerfile  LICENSE  VUA.ipynb  app.py  pyproject.toml  requirements.txt  test_app.py
