[tool.poetry]
name = "vua"
version = "0.1.0"
description = "VUA (Virtual User Assistant) for VEGAS Pro: An intuitive AI-powered tool designed to assist users by answering queries and providing insights directly from their project documents within VEGAS Pro."
authors = ["Samuel Nyarko <s.nyarko@hzdr.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
#altair =  "4.1.0"
#openai = "*"
jupyter = "*"
#pydantic =  "1.10.9"
langchain =  "0.0.154"
PyPDF2 = "3.0.1"
streamlit ="1.18.1"
faiss-cpu = "1.7.4"
streamlit-extras= "*"
altair = "4.1.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-app = "streamlit run app.py"